[package]
authors = ["joel nises <joel.nises@gmail.com>"]
edition = "2021"
name = "pistolhot"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
backtrace = "0.3.64"
crossbeam = "0.8.1"
dirs = "4.0.0"
env_logger = "0.9.0"
flexi_logger = "0.22.2"
log = "0.4.14"
log-panics = {version = "2.0.0", features = ["with-backtrace"]}
msgbox = "0.7"
once_cell = "1.9.0"
raw-window-handle = "0.4.2"
synth = {path = "../synth"}
vst = "0.3"
wmidi = "4.0.6"
# need patches for egui 0.17
# TODO switch back to main repo when merged
baseview = { git = "https://github.com/jnises/baseview.git", rev = "5b57af2463ef55c4ac702ef662c3472c328a3c6b", features = ["opengl"]  }
egui = "0.17"
egui-baseview = {git = "https://github.com/jnises/egui-baseview.git", rev = "d02bbe4759a6e818efbcf7c8b8c7e799b121d45a"}

[profile.release]
lto = true
opt-level = 2
