[package]
authors = ["joel nises <joel.nises@gmail.com>"]
edition = "2021"
name = "pistolhot-wasms"
version = "0.0.1"

[lib]
# rlib needed for tests
crate-type = ["cdylib", "rlib"]

[dependencies]
pistolhot-app = { path = "../app" }
anyhow = "1.0"
cfg-if = "1.0"
chrono = "0.4"
console_error_panic_hook = "0.1"
cpal = {version = "0.13", features = ["wasm-bindgen"]}
crossbeam = "0.8"
eframe = "0.17"
env_logger = "0.9"
glam = "0.20"
log = "0.4"
midir = "0.7"
parking_lot = {version = "0.12"}
ringbuf = "0.2"
web-sys = {version = "0.3", features = ["console", "Window"]}
wmidi = "4.0"

[profile.release]
# make things smaller
codegen-units = 1
lto = true
opt-level = 's'

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
